# libreria1

./: .gitignore  pyproject.toml
accounts/: admin.py  forms.py  tests.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py
