[tool.poetry]
name = "libreria1"
version = "0.1.0"
description = "Django project"
authors = ["Sereton <astrolillo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
